{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 81,
  "lineage": "465fd54a-e000-efbf-5b09-fc6e4a6a9fe3",
  "resources": [
    {
      "module": "module.subnet_sets[\"security_vpc-mgmt\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:route-table/rtb-08d277ce89633bf03",
            "id": "rtb-08d277ce89633bf03",
            "owner_id": "961341553712",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0386a7cef4034b8c7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "mgmtb",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "mgmtb",
              "Owner": "PS Team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0470547aa8d3eb23f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-mgmt\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2463769cd687797",
            "route_table_id": "rtb-08d277ce89633bf03",
            "subnet_id": "subnet-0d0bf73598c4b65f6"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-mgmt\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:subnet/subnet-0d0bf73598c4b65f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0bf73598c4b65f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341553712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "mgmtb",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "mgmtb",
              "Owner": "PS Team"
            },
            "vpc_id": "vpc-0470547aa8d3eb23f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-trust\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:route-table/rtb-060872306e7f807c2",
            "id": "rtb-060872306e7f807c2",
            "owner_id": "961341553712",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "trustb",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "trustb",
              "Owner": "PS Team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0470547aa8d3eb23f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-trust\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03249827bea4ded8a",
            "route_table_id": "rtb-060872306e7f807c2",
            "subnet_id": "subnet-0db416b28c5171da0"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-trust\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:subnet/subnet-0db416b28c5171da0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db416b28c5171da0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341553712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "trustb",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "trustb",
              "Owner": "PS Team"
            },
            "vpc_id": "vpc-0470547aa8d3eb23f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-untrust\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:route-table/rtb-0841debfa2f6acf86",
            "id": "rtb-0841debfa2f6acf86",
            "owner_id": "961341553712",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "untrustb",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "untrustb",
              "Owner": "PS Team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0470547aa8d3eb23f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-untrust\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f3a9f8830a6fec0",
            "route_table_id": "rtb-0841debfa2f6acf86",
            "subnet_id": "subnet-0af129122b3ba125a"
          },
          "dependencies": [
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_sets[\"security_vpc-untrust\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:subnet/subnet-0af129122b3ba125a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af129122b3ba125a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961341553712",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "untrustb",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "untrustb",
              "Owner": "PS Team"
            },
            "vpc_id": "vpc-0470547aa8d3eb23f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries[\"vmseries-01\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mgmt",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0603a75fe7782864d",
            "arn": "arn:aws:ec2:us-west-1:961341553712:elastic-ip/eipalloc-0603a75fe7782864d",
            "association_id": "eipassoc-0bd2cc0b918c688e1",
            "domain": "vpc",
            "id": "eipalloc-0603a75fe7782864d",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0e7f5632b8fa10ad5",
            "private_dns": "ip-10-100-0-108.us-west-1.compute.internal",
            "private_ip": "10.100.0.108",
            "public_dns": "ec2-184-72-34-1.us-west-1.compute.amazonaws.com",
            "public_ip": "184.72.34.1",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-vmseries-01-mgmt",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-vmseries-01-mgmt",
              "Owner": "PS Team"
            },
            "vpc": true
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vmseries.aws_network_interface.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries[\"vmseries-01\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07fdc45c429e2e5e8",
            "arn": "arn:aws:ec2:us-west-1:961341553712:instance/i-0e78d9f3285f88868",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansh193-vmseries_instance_profile01",
            "id": "i-0e78d9f3285f88868",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "ansh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0e7f5632b8fa10ad5"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e7f5632b8fa10ad5",
            "private_dns": "ip-10-100-0-108.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.0.108",
            "public_dns": "ec2-184-72-34-1.us-west-1.compute.amazonaws.com",
            "public_ip": "184.72.34.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-1:961341553712:key/c1ad33d6-75c6-4084-aad8-e2c47cd67b43",
                "throughput": 125,
                "volume_id": "vol-0d0144f7d641d9ac9",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0bf73598c4b65f6",
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-vmseries-01",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-vmseries-01",
              "Owner": "PS Team"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-vmseries-01",
              "Owner": "PS Team"
            },
            "vpc_security_group_ids": [
              "sg-06eac568ef8ead656"
            ]
          },
          "dependencies": [
            "module.bootstrap.aws_iam_instance_profile.this",
            "module.bootstrap.aws_iam_role.this",
            "module.bootstrap.aws_iam_role_policy.bootstrap",
            "module.bootstrap.aws_s3_bucket.this",
            "module.bootstrap.aws_s3_bucket_ownership_controls.this",
            "module.bootstrap.aws_s3_bucket_public_access_block.this",
            "module.bootstrap.aws_s3_bucket_server_side_encryption_configuration.example",
            "module.bootstrap.aws_s3_bucket_versioning.this",
            "module.bootstrap.aws_s3_object.bootstrap_dirs",
            "module.bootstrap.aws_s3_object.bootstrap_files",
            "module.bootstrap.aws_s3_object.init_cfg",
            "module.bootstrap.data.aws_iam_role.this",
            "module.bootstrap.data.aws_partition.this",
            "module.bootstrap.data.aws_s3_bucket.this",
            "module.bootstrap.random_id.sufix",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vmseries.aws_network_interface.this",
            "module.vmseries.data.aws_ami.this",
            "module.vmseries.data.aws_kms_alias.current_arn",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vmseries[\"vmseries-01\"]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "interface_eth1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:network-interface/eni-0b3cd82d748e29247",
            "id": "eni-0b3cd82d748e29247",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:82:79:c8:07:8f",
            "owner_id": "961341553712",
            "private_dns_name": "ip-10-100-1-86.us-west-1.compute.internal",
            "private_ip": "10.100.1.86",
            "private_ip_list": [
              "10.100.1.86"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.100.1.86"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09e7350394fe02d18"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0af129122b3ba125a",
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-vmseries-01-interface_eth1",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-vmseries-01-interface_eth1",
              "Owner": "PS Team"
            }
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "interface_eth2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:network-interface/eni-07c73529b20edecca",
            "id": "eni-07c73529b20edecca",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:76:df:b9:af:fd",
            "owner_id": "961341553712",
            "private_dns_name": "ip-10-100-2-91.us-west-1.compute.internal",
            "private_ip": "10.100.2.91",
            "private_ip_list": [
              "10.100.2.91"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.100.2.91"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09e7350394fe02d18"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0db416b28c5171da0",
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-vmseries-01-interface_eth2",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-vmseries-01-interface_eth2",
              "Owner": "PS Team"
            }
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        },
        {
          "index_key": "mgmt",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:network-interface/eni-0e7f5632b8fa10ad5",
            "id": "eni-0e7f5632b8fa10ad5",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:6b:a8:55:fc:37",
            "owner_id": "961341553712",
            "private_dns_name": "ip-10-100-0-108.us-west-1.compute.internal",
            "private_ip": "10.100.0.108",
            "private_ip_list": [
              "10.100.0.108"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.100.0.108"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06eac568ef8ead656"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d0bf73598c4b65f6",
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-vmseries-01-mgmt",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-vmseries-01-mgmt",
              "Owner": "PS Team"
            }
          },
          "dependencies": [
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:internet-gateway/igw-0386a7cef4034b8c7",
            "id": "igw-0386a7cef4034b8c7",
            "owner_id": "961341553712",
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-security-vpc-igw",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-security-vpc-igw",
              "Owner": "PS Team"
            },
            "vpc_id": "vpc-0470547aa8d3eb23f"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "from_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:route-table/rtb-0eea8d59c77f3d900",
            "id": "rtb-0eea8d59c77f3d900",
            "owner_id": "961341553712",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-security-vpc-igw",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-security-vpc-igw",
              "Owner": "PS Team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0470547aa8d3eb23f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "from_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "gateway_id": "igw-0386a7cef4034b8c7",
            "id": "rtbassoc-0971a1260c7b3c7d0",
            "route_table_id": "rtb-0eea8d59c77f3d900"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vmseries_mgmt",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:security-group/sg-06eac568ef8ead656",
            "description": "Security group managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit All traffic outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06eac568ef8ead656",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Permit SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vmseries_mgmt",
            "name_prefix": "",
            "owner_id": "961341553712",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "vmseries_mgmt",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "vmseries_mgmt",
              "Owner": "PS Team"
            },
            "timeouts": null,
            "vpc_id": "vpc-0470547aa8d3eb23f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc[\"security_vpc\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:961341553712:vpc/vpc-0470547aa8d3eb23f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0575306fc88aa43d9",
            "default_route_table_id": "rtb-09d0ece54bbfe4fda",
            "default_security_group_id": "sg-09e7350394fe02d18",
            "dhcp_options_id": "dopt-01dcc52c377685769",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0470547aa8d3eb23f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d0ece54bbfe4fda",
            "owner_id": "961341553712",
            "tags": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-security-vpc",
              "Owner": "PS Team"
            },
            "tags_all": {
              "Application": "Palo Alto Networks VM-Series NGFW",
              "ManagedBy": "terraform",
              "Name": "ansh193-security-vpc",
              "Owner": "PS Team"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc_routes[\"security_vpc-mgmt-0.0.0.0/0\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-west-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0386a7cef4034b8c7",
            "id": "r-rtb-08d277ce89633bf031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d277ce89633bf03",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.natgw_set.aws_eip.this",
            "module.natgw_set.aws_nat_gateway.this",
            "module.natgw_set.data.aws_eip.this",
            "module.natgw_set.data.aws_nat_gateway.this",
            "module.subnet_sets.aws_network_acl_association.main",
            "module.subnet_sets.aws_route_table.shared",
            "module.subnet_sets.aws_route_table.this",
            "module.subnet_sets.aws_route_table_association.this",
            "module.subnet_sets.aws_subnet.this",
            "module.subnet_sets.data.aws_route_table.this",
            "module.subnet_sets.data.aws_subnet.this",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_network_acl.this",
            "module.vpc.aws_network_acl_rule.this",
            "module.vpc.aws_route_table.from_igw",
            "module.vpc.aws_route_table.from_vgw",
            "module.vpc.aws_route_table_association.from_igw",
            "module.vpc.aws_route_table_association.from_vgw",
            "module.vpc.aws_security_group.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.data.aws_internet_gateway.this",
            "module.vpc.data.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}